# e-library

./: backup.py  main.py  pyproject.toml
static/: script.js
templates/: index.html  read.html
